inventory table cut off fixed

--- a/src/app/staff/inventory/staffInventory.module.css
+++ b/src/app/staff/inventory/staffInventory.module.css
@@ -55,7 +55,7 @@
 }
 
 .inventoryTableContainer {
-  max-height: 80vh;
+  max-height: 70vh;
   overflow-y: auto;
   border: 1px solid var(--c7);
 }
